--- a/src/index.html
+++ b/src/index.html
@@ -7,124 +7,145 @@
   <meta name="author" content="Максим Акимов">
   <title></title>
 </head>
-<body class="layout">
-  <header class="page header">
-    <nav class="menu">
-      <ul class="list menu-list">
-        <li class="menu-list__item">
-          <a href="#" class="link menu-list__link">Покрытия и градиенты</a>
+<body class="layout layout_theme_dark">
+<header class="page header">
+  <nav class="menu">
+    <ul class="list menu-list">
+      <li class="menu-list__item">
+        <a href="#" class="link menu-list__link">Покрытия и градиенты</a>
+      </li>
+      <li class="menu-list__item">
+        <a href="#" class="link menu-list__link">Велосипеды</a>
+      </li>
+      <li class="menu-list__item">
+        <a href="#" class="link menu-list__link">Тренировки</a>
+      </li>
+    </ul>
+  </nav>
+  <section class="header-container">
+    <h1 class="heading heading_style_title header-container__heading">Шоссе, ТТ и&nbsp;Грэвел</h1>
+    <p class="paragraph header-container__paragraph">
+      Триатлонные старты, горные серпантины или грейвел заезды по живописным маршрутам – нужно только определиться с
+      выбором велосипеда и отправиться в путь.
+    </p>
+    <a href="#" class="btn btn_style_primary">Подробнее</a>
+    <div class="explanation">Cannondale Systemsix</div>
+    <div class="main-image"></div>
+  </section>
+</header>
+<main class="page main">
+  <section class="section section_type_quote">
+    <img src="<%=require('./images/quote-image.svg')%>" alt="" class="image image_position_quote">
+    <blockquote class="heading heading_style_subtitle">
+      «Катайся много или мало, долго или коротко, как хочешь - но катайся»
+    </blockquote>
+    <cite class="origin">
+      <span class="author">Эдди Меркс</span>
+      <span class="profession">Велогонщик</span>
+    </cite>
+  </section>
+  <section class="section section_type_highway">
+    <h2 class="heading heading_style_title heading_position_highway">Шоссе</h2>
+    <p class="paragraph paragraph_position_highway">
+      На шоссейном велосипеде можно ездить по асфальту на разных градиентах: будь то горы или равнины. Гонки проходят
+      в командном пелотоне, но тренироваться можно и самостоятельно.
+    </p>
+    <div class="gallery">
+      <ul class="list gallery__list">
+        <li class="gallery__item">
+          <img src="<%=require('./images/gallery-image-1.svg')%>" alt="" class="gallery__img">
         </li>
-        <li class="menu-list__item">
-          <a href="#" class="link menu-list__link">Велосипеды</a>
-        </li>
-        <li class="menu-list__item">
-          <a href="#" class="link menu-list__link">Тренировки</a>
-        </li>
-      </ul>
-    </nav>
-    <section class="header-container">
-      <h1 class="heading heading_style_title header-container__heading">Шоссе, ТТ и&nbsp;Грэвел</h1>
-      <p class="paragraph header-container__paragraph">
-        Триатлонные старты, горные серпантины или грейвел заезды по живописным маршрутам – нужно только определиться с
-        выбором велосипеда и отправиться в путь.
-      </p>
-      <a href="#" class="btn btn_style_primary">Подробнее</a>
-      <div class="explanation">Cannondale Systemsix</div>
-      <div class="main-image"></div>
-    </section>
-  </header>
-  <main class="page main">
-    <section class="section section_type_quote">
-      <img src="<%=require('./images/quote-image.svg')%>" alt="" class="image image_position_quote">
-        <blockquote class="heading heading_style_subtitle">
-          «Катайся много или мало, долго или коротко, как хочешь - но катайся»
-        </blockquote>
-      <cite class="origin">
-        <span class="author">Эдди Меркс</span>
-        <span class="profession">Велогонщик</span>
-      </cite>
-    </section>
-    <section class="section section_type_highway">
-      <h2 class="heading heading_style_title heading_position_highway">Шоссе</h2>
-      <p class="paragraph paragraph_position_highway">
-        На шоссейном велосипеде можно ездить по асфальту на разных градиентах: будь то горы или равнины. Гонки проходят
-        в командном пелотоне, но тренироваться можно и самостоятельно.
-      </p>
-      <div class="gallery">
-        <ul class="list gallery__list">
-          <li class="gallery__item">
-            <img src="<%=require('./images/gallery-image-1.svg')%>" alt="" class="gallery__img">
-          </li>
-          <li class="gallery__item">
-            <img src="<%=require('./images/gallery-image-2.svg')%>" alt="" class="gallery__img">
-          </li>
-        </ul>
-      </div>
-      <ul class="list gallery__navbar">
-        <li class="gallery__navbar-item">
-          <button class="btn gallery__btn gallery__btn_style_prev"></button>
-        </li>
-        <li class="gallery__navbar-item">
-          <button class="btn gallery__btn gallery__btn_style_next"></button>
+        <li class="gallery__item">
+          <img src="<%=require('./images/gallery-image-2.svg')%>" alt="" class="gallery__img">
         </li>
       </ul>
-    </section>
-    <section class="section section_type_bicycles">
-      <h2 class="heading heading_style_title heading_position_bicycles">Велосипеды</h2>
-      <ul class="list links-list">
-        <li class="links-list__item">
-          <a href="#" class="link links-list__link links-list__link_active">Шоссе</a>
-        </li>
-        <li class="links-list__item">
-          <a href="#" class="link links-list__link">Грэвел</a>
-        </li>
-        <li class="links-list__item">
-          <a href="#" class="link links-list__link">ТТ</a>
-        </li>
-      </ul>
-      <ul class="cards">
-        <li class="cards__item">
-          <img src="#" alt="" class="cards__img">
-          <p class="cards__title">Cervelo Caledonia-5</p>
-        </li>
-        <li class="cards__item">
-          <img src="#" alt="" class="cards__img">
-          <p class="cards__title">Cannondale Systemsix Himod</p>
-        </li>
-        <li class="cards__item">
-          <img src="#" alt="" class="cards__img">
-          <p class="cards__title">Trek Domane SL-7</p>
-        </li>
-      </ul>
-    </section>
-    <section class="section section_type_training">
-      <h2 class="heading heading_style_subtitle">Велосипеды</h2>
-      <p class="paragraph">
-        Чтобы найти маршрут для тренировки можно воспользоваться сервисом Komoot, а записать эти тренировки поможет
-        приложение Strava, а также это приложение позволит построить тренировочный план.
-      </p>
-      <ul class="links-list">
-        <li class="links-list__item">
-          <a href="#" class="links-list__link links-list__link_active">Strava</a>
-        </li>
-        <li class="links-list__item">
-          <a href="#" class="links-list__link">Komoot</a>
-        </li>
-      </ul>
-      <img src="#" alt="" class="image">
-    </section>
-  </main>
-  <footer class="page footer">
-    <form action="#" class="subscription-form">
-      <h2 class="heading heading_style_subtitle">Подпишитесь на рассылку —</h2>
-      <input type="email" class="subscription__input" name="email" id="email" placeholder="Ваш e-mail">
-      <button class="btn subscription__btn"></button>
-    </form>
-    <p class="copyright">© Road Club 2021</p>
-    <div class="theme-switcher">
-      <input type="checkbox" class="theme-switcher__input" name="themeSwitcher" id="themeSwitcher">
-      <label for="themeSwitcher" class="theme-switcher__label"></label>
     </div>
-  </footer>
+    <ul class="list gallery__navbar">
+      <li class="gallery__navbar-item">
+        <button class="btn gallery__btn gallery__btn_style_prev"></button>
+      </li>
+      <li class="gallery__navbar-item">
+        <button class="btn gallery__btn gallery__btn_style_next"></button>
+      </li>
+    </ul>
+  </section>
+  <section class="section section_type_bicycles">
+    <h2 class="heading heading_style_title heading_position_bicycles">Велосипеды</h2>
+    <ul class="list links-list links-list_position_bicycle">
+      <li class="links-list__item">
+        <a href="#" class="link links-list__link links-list__link_active">Шоссе</a>
+      </li>
+      <li class="links-list__item">
+        <a href="#" class="link links-list__link">Грэвел</a>
+      </li>
+      <li class="links-list__item">
+        <a href="#" class="link links-list__link">ТТ</a>
+      </li>
+    </ul>
+    <ul class="list cards">
+      <li class="cards__item">
+        <a href="https://www.sigmasports.com/item/Cervelo/Caledonia-5-Ultegra-Disc-Road-Bike-2021/RDEN "
+           target="_blank">
+          <div class="cards__img-container">
+            <img src="<%=require('./images/bicycle-image-1.svg')%>" alt="Велосипед Cervelo Caledonia-5"
+                 class="cards__img">
+          </div>
+        </a>
+        <p class="cards__title">Cervelo Caledonia-5</p>
+      </li>
+      <li class="cards__item">
+        <a href="https://www.sigmasports.com/item/Cannondale/SystemSix-HiMOD-Ultegra-Di2-Disc-Road-Bike-2021/R82J"
+           target="_blank">
+          <div class="cards__img-container">
+            <img src="<%=require('./images/bicycle-image-2.svg')%>" alt="Велосипед Cannondale Systemsix Himod"
+                 class="cards__img">
+          </div>
+        </a>
+        <p class="cards__title">Cannondale Systemsix Himod</p>
+      </li>
+      <li class="cards__item">
+        <a href="https://www.sigmasports.com/item/Trek/Domane-SL-7-Force-eTap-AXS-Disc-Road-Bike-2021/RULF"
+           target="_blank">
+          <div class="cards__img-container">
+            <img src="<%=require('./images/bicycle-image-3.svg')%>" alt="Велосипед Trek Domane SL-7" class="cards__img">
+          </div>
+        </a>
+        <p class="cards__title">Trek Domane SL-7</p>
+      </li>
+    </ul>
+  </section>
+  <section class="section section_type_training">
+    <h2 class="heading heading_style_title">Тренировки</h2>
+    <p class="paragraph">
+      Чтобы найти маршрут для тренировки можно воспользоваться сервисом Komoot, а записать эти тренировки поможет
+      приложение Strava, а также это приложение позволит построить тренировочный план.
+    </p>
+    <ul class="list links-list links-list_position_training">
+      <li class="links-list__item">
+        <a href="https://www.strava.com" target="_blank"
+           class="link links-list__link links-list__link_active">Strava</a>
+      </li>
+      <li class="links-list__item">
+        <a href="https://www.komoot.com" target="_blank"
+           class="link links-list__link links-list__link_active">Komoot</a>
+      </li>
+    </ul>
+    <img src="<%=require('./images/training-image.svg')%>" alt="" class="image image_position_training">
+  </section>
+</main>
+<footer class="page footer">
+  <form action="#" class="subscription-form">
+    <h2 class="heading heading_style_subtitle heading_position_footer">Подпишитесь на рассылку —</h2>
+    <input type="email" class="subscription__input" name="email" id="email" placeholder="Ваш e-mail" required>
+    <button type="submit" class="btn subscription__btn">ok</button>
+  </form>
+  <p class="copyright">© Road Club 2021</p>
+  <div class="theme-switcher">
+    <div class="theme-switcher__state-icon theme-switcher__state-icon_style_bright"></div>
+    <input type="checkbox" class="theme-switcher__input" name="themeSwitcher" id="themeSwitcher">
+    <label for="themeSwitcher" class="theme-switcher__label"></label>
+    <div class="theme-switcher__state-icon theme-switcher__state-icon_style_dark"></div>
+  </div>
+</footer>
 </body>
 </html>
