Добавлена темная тема

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Максим Акимов">
   <title></title>
 </head>
-<body class="layout layout_theme_dark">
+<body class="layout">
 <header class="page header">
   <nav class="menu">
     <ul class="list menu-list">
@@ -35,7 +35,7 @@
 </header>
 <main class="page main">
   <section class="section section_type_quote">
-    <img src="<%=require('./images/quote-image.svg')%>" alt="" class="image image_position_quote">
+    <img src="<%=require('./images/quote-image.jpg')%>" alt="" class="image image_position_quote">
     <blockquote class="heading heading_style_subtitle">
       «Катайся много или мало, долго или коротко, как хочешь - но катайся»
     </blockquote>
@@ -44,28 +44,61 @@
       <span class="profession">Велогонщик</span>
     </cite>
   </section>
-  <section class="section section_type_highway">
-    <h2 class="heading heading_style_title heading_position_highway">Шоссе</h2>
-    <p class="paragraph paragraph_position_highway">
-      На шоссейном велосипеде можно ездить по асфальту на разных градиентах: будь то горы или равнины. Гонки проходят
-      в командном пелотоне, но тренироваться можно и самостоятельно.
-    </p>
-    <div class="gallery">
-      <ul class="list gallery__list">
-        <li class="gallery__item">
-          <img src="<%=require('./images/gallery-image-1.svg')%>" alt="" class="gallery__img">
-        </li>
-        <li class="gallery__item">
-          <img src="<%=require('./images/gallery-image-2.svg')%>" alt="" class="gallery__img">
-        </li>
-      </ul>
-    </div>
-    <ul class="list gallery__navbar">
-      <li class="gallery__navbar-item">
-        <button class="btn gallery__btn gallery__btn_style_prev"></button>
+  <section class="section section_type_covering">
+    <ul class="list slider">
+      <li class="slider__slide slider__slide_type_highway">
+        <h2 class="heading heading_style_title heading_position_covering">Шоссе</h2>
+        <p class="paragraph paragraph_position_covering">
+          На шоссейном велосипеде можно ездить по асфальту на разных градиентах: будь то горы или равнины. Гонки
+          проходят
+          в командном пелотоне, но тренироваться можно и самостоятельно.
+        </p>
+        <ul class="list gallery">
+          <li class="gallery__item gallery__item_label_highway">
+            <img src="<%=require('./images/gallery-image-1.jpg')%>" alt="" class="gallery__img">
+          </li>
+          <li class="gallery__item">
+            <img src="<%=require('./images/gallery-image-2.jpg')%>" alt="" class="gallery__img">
+          </li>
+        </ul>
       </li>
-      <li class="gallery__navbar-item">
-        <button class="btn gallery__btn gallery__btn_style_next"></button>
+      <li class="slider__slide slider__slide_type_gravel">
+        <h2 class="heading heading_style_title heading_position_covering">Грэвел</h2>
+        <p class="paragraph paragraph_position_covering">
+          Грэвел похож на шоссейный велосипед, но конструкция рамы немного отличается, и на нём стоят более широкие
+          покрышки, всё для того чтобы проехать по лёгкому бездорожью.
+        </p>
+        <ul class="list gallery">
+          <li class="gallery__item gallery__item_label_gravel">
+            <img src="<%=require('./images/gallery-image-2.jpg')%>" alt="" class="gallery__img">
+          </li>
+          <li class="gallery__item">
+            <img src="<%=require('./images/gallery-image-3.jpg')%>" alt="" class="gallery__img">
+          </li>
+        </ul>
+      </li>
+      <li class="slider__slide slider__slide_type_tt">
+        <h2 class="heading heading_style_title heading_position_covering">ТТ</h2>
+        <p class="paragraph paragraph_position_covering">
+          ТТ — это велосипед для триатлона или раздельного старта, гооняют на таком велике только по равнинному
+          асфальту, велик очень быстрые и аэродинамичный.
+        </p>
+        <ul class="list gallery">
+          <li class="gallery__item gallery__item_label_tt">
+            <img src="<%=require('./images/gallery-image-3.jpg')%>" alt="" class="gallery__img">
+          </li>
+          <li class="gallery__item">
+            <img src="<%=require('./images/gallery-image-1.jpg')%>" alt="" class="gallery__img">
+          </li>
+        </ul>
+      </li>
+    </ul>
+    <ul class="list slider__navbar">
+      <li class="slider__navbar-item">
+        <button class="btn slider__btn slider__btn_style_prev"></button>
+      </li>
+      <li class="slider__navbar-item">
+        <button class="btn slider__btn slider__btn_style_next"></button>
       </li>
     </ul>
   </section>
@@ -73,21 +106,22 @@
     <h2 class="heading heading_style_title heading_position_bicycles">Велосипеды</h2>
     <ul class="list links-list links-list_position_bicycle">
       <li class="links-list__item">
-        <a href="#" class="link links-list__link links-list__link_active">Шоссе</a>
+        <a href="ervbrb" data-rel="cards_type_highway"
+           class="link links-list__link links-list__link_type_card links-list__link_active">Шоссе</a>
       </li>
       <li class="links-list__item">
-        <a href="#" class="link links-list__link">Грэвел</a>
+        <a href="rtbrwtb" data-rel="cards_type_gravel" class="link links-list__link links-list__link_type_card">Грэвел</a>
       </li>
       <li class="links-list__item">
-        <a href="#" class="link links-list__link">ТТ</a>
+        <a href="btrbrs" data-rel="cards_type_tt" class="link links-list__link links-list__link_type_card">ТТ</a>
       </li>
     </ul>
-    <ul class="list cards">
+    <ul class="list cards cards_type_highway">
       <li class="cards__item">
-        <a href="https://www.sigmasports.com/item/Cervelo/Caledonia-5-Ultegra-Disc-Road-Bike-2021/RDEN "
+        <a href="https://www.sigmasports.com/item/Cervelo/Caledonia-5-Ultegra-Disc-Road-Bike-2021/RDEN"
            target="_blank">
           <div class="cards__img-container">
-            <img src="<%=require('./images/bicycle-image-1.svg')%>" alt="Велосипед Cervelo Caledonia-5"
+            <img src="<%=require('./images/bicycle-image-1.jpg')%>" alt="Велосипед Cervelo Caledonia-5"
                  class="cards__img">
           </div>
         </a>
@@ -97,7 +131,7 @@
         <a href="https://www.sigmasports.com/item/Cannondale/SystemSix-HiMOD-Ultegra-Di2-Disc-Road-Bike-2021/R82J"
            target="_blank">
           <div class="cards__img-container">
-            <img src="<%=require('./images/bicycle-image-2.svg')%>" alt="Велосипед Cannondale Systemsix Himod"
+            <img src="<%=require('./images/bicycle-image-2.jpg')%>" alt="Велосипед Cannondale Systemsix Himod"
                  class="cards__img">
           </div>
         </a>
@@ -107,10 +141,73 @@
         <a href="https://www.sigmasports.com/item/Trek/Domane-SL-7-Force-eTap-AXS-Disc-Road-Bike-2021/RULF"
            target="_blank">
           <div class="cards__img-container">
-            <img src="<%=require('./images/bicycle-image-3.svg')%>" alt="Велосипед Trek Domane SL-7" class="cards__img">
+            <img src="<%=require('./images/bicycle-image-3.jpg')%>" alt="Велосипед Trek Domane SL-7" class="cards__img">
           </div>
         </a>
         <p class="cards__title">Trek Domane SL-7</p>
+      </li>
+    </ul>
+    <ul class="list cards cards_type_gravel">
+      <li class="cards__item">
+        <a href="https://www.sigmasports.com/item/Cervelo/Aspero-GRX-810-1x-Disc-Gravel-Bike-2021/RJDE"
+           target="_blank">
+          <div class="cards__img-container">
+            <img src="<%=require('./images/bicycle-image-4.jpg')%>" alt="Велосипед Cervelo Aspero GRX 810"
+                 class="cards__img">
+          </div>
+        </a>
+        <p class="cards__title">Cervelo Aspero GRX 810</p>
+      </li>
+      <li class="cards__item">
+        <a href="https://www.sigmasports.com/item/Specialized/S-Works-Diverge-Gravel-Bike-2020/NVJ9"
+           target="_blank">
+          <div class="cards__img-container">
+            <img src="<%=require('./images/bicycle-image-5.jpg')%>" alt="Велосипед Specialized S-Works Diverge"
+                 class="cards__img">
+          </div>
+        </a>
+        <p class="cards__title">Specialized S-Works Diverge</p>
+      </li>
+      <li class="cards__item">
+        <a href="https://www.sigmasports.com/item/Cannondale/Topstone-Carbon-Lefty-3-Disc-Gravel-Road-Bike-2021/PUC8"
+           target="_blank">
+          <div class="cards__img-container">
+            <img src="<%=require('./images/bicycle-image-6.jpg')%>" alt="Велосипед Cannondale Topstone Lefty 3"
+                 class="cards__img">
+          </div>
+        </a>
+        <p class="cards__title">Cannondale Topstone Lefty 3</p>
+      </li>
+    </ul>
+    <ul class="list cards cards_type_tt">
+      <li class="cards__item">
+        <a href="https://www.sigmasports.com/item/Specialized/S-Works-Shiv-Disc-Limited-Edition-Triathlon-Bike-2019/K8P9"
+           target="_blank">
+          <div class="cards__img-container">
+            <img src="<%=require('./images/bicycle-image-7.jpg')%>" alt="Велосипед Specialized S-Works Shiv"
+                 class="cards__img">
+          </div>
+        </a>
+        <p class="cards__title">Specialized S-Works Shiv</p>
+      </li>
+      <li class="cards__item">
+        <a href="https://www.sigmasports.com/item/BMC/Timemachine-01-One-Force-Disc-TT-Triathlon-Bike-2021/S835"
+           target="_blank">
+          <div class="cards__img-container">
+            <img src="<%=require('./images/bicycle-image-8.jpg')%>" alt="Велосипед BMC Timemachine 01 ONE"
+                 class="cards__img">
+          </div>
+        </a>
+        <p class="cards__title">BMC Timemachine 01 ONE</p>
+      </li>
+      <li class="cards__item">
+        <a href="https://www.sigmasports.com/item/Cervelo/P-Series-Ultegra-Di2-TT-Triathlon-Bike-2021/RM6Q"
+           target="_blank">
+          <div class="cards__img-container">
+            <img src="<%=require('./images/bicycle-image-9.jpg')%>" alt="Велосипед Cervelo P-Series" class="cards__img">
+          </div>
+        </a>
+        <p class="cards__title">Cervelo P-Series</p>
       </li>
     </ul>
   </section>
@@ -130,12 +227,12 @@
            class="link links-list__link links-list__link_active">Komoot</a>
       </li>
     </ul>
-    <img src="<%=require('./images/training-image.svg')%>" alt="" class="image image_position_training">
+    <img src="<%=require('./images/training-image.jpg')%>" alt="" class="image image_position_training">
   </section>
 </main>
 <footer class="page footer">
   <form action="#" class="subscription-form">
-    <h2 class="heading heading_style_subtitle heading_position_footer">Подпишитесь на рассылку —</h2>
+    <h2 class="heading heading_style_form-title heading_position_footer">Подпишитесь на рассылку —</h2>
     <input type="email" class="subscription__input" name="email" id="email" placeholder="Ваш e-mail" required>
     <button type="submit" class="btn subscription__btn">ok</button>
   </form>
