Реализован функционал на JS

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru">
+<html lang="ru" class="scroll">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,13 +12,13 @@
   <nav class="menu">
     <ul class="list menu-list">
       <li class="menu-list__item">
-        <a href="#" class="link menu-list__link">Покрытия и градиенты</a>
+        <a href="#covering" class="link menu-list__link">Покрытия и градиенты</a>
       </li>
       <li class="menu-list__item">
-        <a href="#" class="link menu-list__link">Велосипеды</a>
+        <a href="#bicycles" class="link menu-list__link">Велосипеды</a>
       </li>
       <li class="menu-list__item">
-        <a href="#" class="link menu-list__link">Тренировки</a>
+        <a href="#training" class="link menu-list__link">Тренировки</a>
       </li>
     </ul>
   </nav>
@@ -44,7 +44,7 @@
       <span class="profession">Велогонщик</span>
     </cite>
   </section>
-  <section class="section section_type_covering">
+  <section class="section section_type_covering" id="covering">
     <ul class="list slider">
       <li class="slider__slide slider__slide_type_highway">
         <h2 class="heading heading_style_title heading_position_covering">Шоссе</h2>
@@ -102,7 +102,7 @@
       </li>
     </ul>
   </section>
-  <section class="section section_type_bicycles">
+  <section class="section section_type_bicycles" id="bicycles">
     <h2 class="heading heading_style_title heading_position_bicycles">Велосипеды</h2>
     <ul class="list links-list links-list_position_bicycle">
       <li class="links-list__item">
@@ -110,7 +110,7 @@
            class="link links-list__link links-list__link_type_card links-list__link_active">Шоссе</a>
       </li>
       <li class="links-list__item">
-        <a href="rtbrwtb" data-rel="cards_type_gravel" class="link links-list__link links-list__link_type_card">Грэвел</a>
+        <a href="rtbrhtygwtb" data-rel="cards_type_gravel" class="link links-list__link links-list__link_type_card">Грэвел</a>
       </li>
       <li class="links-list__item">
         <a href="btrbrs" data-rel="cards_type_tt" class="link links-list__link links-list__link_type_card">ТТ</a>
@@ -211,7 +211,7 @@
       </li>
     </ul>
   </section>
-  <section class="section section_type_training">
+  <section class="section section_type_training" id="training">
     <h2 class="heading heading_style_title">Тренировки</h2>
     <p class="paragraph">
       Чтобы найти маршрут для тренировки можно воспользоваться сервисом Komoot, а записать эти тренировки поможет
