Добавлен адаптивный хедер

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
         <a href="#training" class="link menu-list__link">Тренировки</a>
       </li>
     </ul>
+    <button class="btn btn_style_menu"></button>
   </nav>
   <section class="header-container">
     <h1 class="heading heading_style_title header-container__heading">Шоссе, ТТ и&nbsp;Грэвел</h1>
@@ -213,7 +214,7 @@
   </section>
   <section class="section section_type_training" id="training">
     <h2 class="heading heading_style_title">Тренировки</h2>
-    <p class="paragraph">
+    <p class="paragraph paragraph_position_training">
       Чтобы найти маршрут для тренировки можно воспользоваться сервисом Komoot, а записать эти тренировки поможет
       приложение Strava, а также это приложение позволит построить тренировочный план.
     </p>
